--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -15,7 +15,7 @@
         #wrapper {
             display: flex;
             width: 100%;
-            height: 100vh;
+            height: 100%;
             overflow: hidden;
             transition: all 0.3s;
         }
