--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -10,7 +10,7 @@
 
     <style>
         /* Aquí van los estilos de tu sidebar y página */
-        /* Los estilos no necesitan cambios */
+        /* Los estilos no necesitan cambios dasdasdasds */
         #wrapper {
             display: flex;
             width: 100%;
