--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -95,14 +95,17 @@
 
             {% if user.is_authenticated %}
             <div class="dropdown position-fixed bottom-0 start-0 m-3">
-                <button class="btn btn-outline-light dropdown-toggle" type="button" id="profileDropdown"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="fas fa-user"></i> Perfil
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="profileDropdown">
-                    <li><a class="dropdown-item" href="#">Mi perfil</a></li>
-                    <li><a class="dropdown-item" href="/login/">Cerrar sesión</a></li>
-                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <span class="nav-link">Bienvenid@ {{ user.username }}</span>
+                    </li>
+                    <li class="nav-item">
+                      <form method="post" action="{% url 'logout' %}">
+                        {% csrf_token %}
+                        <input type="submit" value="Salir" class="nav-link">
+                      </form>
+                    </li>
+                  </ul> 
             </div>
             {% endif %}
         </div>
