--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -95,18 +95,33 @@
 
             {% if user.is_authenticated %}
             <div class="dropdown position-fixed bottom-0 start-0 m-3">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <span class="nav-link">Bienvenid@ {{ user.username }}</span>
+                <button class="btn btn-light dropdown-toggle" type="button" id="userDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="fas fa-user-circle"></i> Bienvenid@ {{ user.username }}
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="userDropdown">
+                    <li>
+                        <a class="dropdown-item" href="">
+                            <i class="fas fa-user"></i> Mi perfil
+                        </a>
                     </li>
-                    <li class="nav-item">
-                      <form method="post" action="{% url 'logout' %}">
-                        {% csrf_token %}
-                        <input type="submit" value="Salir" class="nav-link">
-                      </form>
+                    <li>
+                        <a class="dropdown-item" href="">
+                            <i class="fas fa-cogs"></i> Configuración
+                        </a>
                     </li>
-                  </ul> 
-            </div>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li>
+                        <form method="post" action="{% url 'logout' %}">
+                            {% csrf_token %}
+                            <button type="submit" class="dropdown-item text-danger">
+                                <i class="fas fa-sign-out-alt"></i> Salir
+                            </button>
+                        </form>
+                    </li>
+                </ul>
+            </div>            
             {% endif %}
         </div>
 
