--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -1,172 +1,146 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/startbootstrap-sb-admin-2@4.6.0/dist/css/sb-admin-2.min.css"
-        rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/startbootstrap-sb-admin-2@4.6.0/dist/css/sb-admin-2.min.css" rel="stylesheet">
+
+    <style>
+        #wrapper {
+            display: flex;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            transition: all 0.3s;
+        }
+        #sidebar {
+            background-color: #FF6219;
+            width: 270px;
+            height: 100%;
+            position: fixed;
+            top: 0;
+            left: 0;
+            padding-top: 30px;
+            transition: all 0.3s;
+        }
+        .sidebar-heading {
+            font-size: 1.5rem;
+            font-weight: bold;
+            padding: 1rem;
+            text-align: center;
+        }
+        .list-group-item {
+            color: white;
+            background-color: transparent;
+            border: none;
+            padding: 1rem;
+            transition: background-color 0.2s ease;
+        }
+        .list-group-item:hover {
+            background-color: #fb967b;
+            color: white;
+        }
+        .dropdown-item:focus, .dropdown-item:hover {
+            background-color: #f4623a;
+            color: white;
+        }
+        #page-content-wrapper {
+            margin-left: 250px;
+            padding: 20px;
+            background-color: white;
+            width: 100%;
+            transition: margin-left 0.3s;
+        }
+        @media (max-width: 768px) {
+            #sidebar {
+                width: 150px;
+            }
+            #page-content-wrapper {
+                margin-left: 150px;
+            }
+        }
+    </style>
 </head>
-
 <body>
-    <div id="wrapper">
-        <div id="sidebar">
-            <div class="sidebar-heading">
-                <a href="#" style="color: white; text-decoration: none;">
-                    <i class="fas fa-cubes"></i> PW Ingeniería
-                </a>
-            </div>
-            <div class="list-group">
-                {% if user.is_authenticated %}
-                <!-- Gerente -->
+
+<div id="wrapper">
+    <div id="sidebar">
+        <div class="sidebar-heading">
+            <a href="{% url 'dashboard' %}" style="color: white; text-decoration: none;">
+                <i class="fas fa-cubes"></i> PW Ingeniería
+            </a>
+        </div>
+        <div class="list-group">
+            {% if user.is_authenticated %}
                 {% if not user.is_superuser %}
-
-                {% block gerente %}
-                <a href="#" class="list-group-item">
-                    <i class="fas fa-tachometer-alt"></i> Resumen
-                </a>
-                <a href="#" class="list-group-item">
-                    <i class="fas fa-plus-circle"></i> Nuevo proyecto
-                </a>
-                <a href="#" class="list-group-item">
-                    <i class="fas fa-plus-circle"></i> Nuevo cliente
-                </a>
-                <div class="dropdown">
-                    <a href="#" class="list-group-item dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fas fa-project-diagram"></i> Proyectos
+                    <a href="{% url 'resumen' %}" class="list-group-item">
+                        <i class="fas fa-tachometer-alt"></i> Resumen
                     </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Ver todos los proyectos</a>
-                        </li>
-                        <li><a class="dropdown-item" href="#">Proyectos completados</a></li>
-                        <li><a class="dropdown-item" href="#">Proyectos en curso</a></li>
-                    </ul>
-                </div>
-                <div class="dropdown">
-                    <a href="#" class="list-group-item dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fas fa-project-diagram"></i> Clientes
+                    <a href="{% url 'nuevo_proyecto' %}" class="list-group-item">
+                        <i class="fas fa-plus-circle"></i> Crear nuevo proyecto
                     </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Ver todos los clientes</a>
-                        </li>
-                    </ul>
-                </div>
-                {% endblock gerente %}
-
                 {% endif %}
-                <!-- Admin -->
                 {% if user.is_superuser %}
-
-                {% block admin %}
-                <a href="/admin/" class="list-group-item">
-                    <i class="fas fa-cogs"></i> Admin
-                </a>
-                <a href="#" class="list-group-item">
-                    <i class="fas fa-plus-circle"></i> Lista de empleados
-                </a>
-                <a href="#" class="list-group-item">
-                    <i class="fas fa-plus-circle"></i> Registrar empleado
-                </a>
-                <br>
-                <a href="#" class="list-group-item">
-                    <i class="fas fa-plus-circle"></i> Lista de usuarios
-                </a>
-                <a href="#" class="list-group-item">
-                    <i class="fas fa-plus-circle"></i> Crear nuevo usuario
-                </a>
-                {% endblock admin %}
-
+                    <a href="/admin/" class="list-group-item">
+                        <i class="fas fa-cogs"></i> Admin
+                    </a>
+                    <div class="dropdown">
+                        <a href="#" class="list-group-item dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fas fa-plus-circle"></i> Gestión de Datos
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{% url 'nuevo_usuario' %}">Crear Usuario</a></li>
+                            <li><a class="dropdown-item" href="{% url 'nuevo_cliente' %}">Crear Cliente</a></li>
+                            <li><a class="dropdown-item" href="#">Crear Área</a></li>
+                        </ul>
+                    </div>
                 {% endif %}
-
-                {% else %}
-                <a href="/accounts/login/" class="list-group-item">
+            {% else %}
+                <a href="/login/" class="list-group-item">
                     <i class="fas fa-sign-in-alt"></i> Iniciar sesión
                 </a>
                 <a href="/signup/" class="list-group-item">
                     <i class="fas fa-user-plus"></i> Registrarse
                 </a>
-                {% endif %}
-            </div>
-
-            {% if user.is_authenticated %}
-            <div class="dropdown position-fixed bottom-0 start-0 m-3">
-                <button class="btn btn-light dropdown-toggle" type="button" id="userDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="fas fa-user-circle"></i> Bienvenid@ {{ user.username }}
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="userDropdown">
-                    <li>
-                        <a class="dropdown-item" href="">
-                            <i class="fas fa-user"></i> Mi perfil
-                        </a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="">
-                            <i class="fas fa-cogs"></i> Configuración
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li>
-                        <form method="post" action="{% url 'logout' %}">
-                            {% csrf_token %}
-                            <button type="submit" class="dropdown-item text-danger">
-                                <i class="fas fa-sign-out-alt"></i> Salir
-                            </button>
-                        </form>
-                    </li>
-                </ul>
-            </div>            
             {% endif %}
-        </div>
-
-        <!-- Mobile Toggle Button -->
-        <button class="toggle-btn" id="sidebarToggleBtn">
-            <i class="fas fa-bars"></i>
-        </button>
-
-        <div id="page-content-wrapper">
-            <!-- Sección de Notificaciones (lo que agregamos de nuevo) -->
-            <div class="d-flex justify-content-end">
-                <div class="dropdown">
-                    <button class="btn navbar-notification dropdown-toggle" type="button" id="notificationsDropdown"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fas fa-bell"></i> <span class="badge bg-danger">3</span>
-                    </button>
-                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="notificationsDropdown">
-                        <li><a class="dropdown-item" href="#">Nueva tarea asignada</a></li>
-                        <li><a class="dropdown-item" href="#">Proyecto completado</a></li>
-                        <li><a class="dropdown-item" href="#">Nuevo mensaje</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Ver todas las notificaciones</a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="mx-5"> <!-- Este es el lugar donde se renderizará el contenido de cada vista -->
-                {% block content %}
-                <!-- El contenido de la página (debe ser definido en las plantillas que extiendan este archivo) -->
-                {% endblock %}
-            </div>
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-    <script src="{% static 'js/sweetalert2.min.js' %}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/startbootstrap-sb-admin-2@4.6.0/dist/js/sb-admin-2.min.js"></script>
+    <div id="page-content-wrapper">
+        <div class="d-flex justify-content-end">
+            <div class="dropdown">
+                <button class="btn navbar-notification dropdown-toggle" type="button" id="notificationsDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="fas fa-bell"></i> <span class="badge bg-danger">3</span>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="notificationsDropdown">
+                    <li><a class="dropdown-item" href="#">Nueva tarea asignada</a></li>
+                    <li><a class="dropdown-item" href="#">Proyecto completado</a></li>
+                    <li><a class="dropdown-item" href="#">Nuevo mensaje</a></li>
+                    <li><a class="dropdown-item text-center" href="#">Ver todas las notificaciones</a></li>
+                </ul>
+            </div>
+        </div>
 
-    <script>
-        // Sidebar toggle for mobile
-        document.getElementById('sidebarToggleBtn').addEventListener('click', function () {
-            document.getElementById('sidebar').classList.toggle('toggle');
-        });
-    </script>
+        <div class="mx-5">
+            {% block content %}
+            {% endblock %}
+        </div>
+    </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/startbootstrap-sb-admin-2@4.6.0/dist/js/sb-admin-2.min.js"></script>
+
+<script>
+    document.getElementById('sidebarToggleBtn').addEventListener('click', function () {
+        document.getElementById('sidebar').classList.toggle('toggle');
+    });
+</script>
 
 </body>
-
 </html>
