--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -17,7 +17,7 @@
     }
 </style>
 
-<body class="bg-light">  
+<body class="bg-light">
 
     <section>
         <div class="container py-2">
@@ -43,7 +43,8 @@
                                             <span class="h1 fw-bold mb-0">PW Ingeniería</span>
                                         </div>
 
-                                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Inicia sesión en tu cuenta</h5>
+                                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Inicia sesión en tu
+                                            cuenta</h5>
 
                                         <div class="form-outline mb-4">
                                             {{ form.username }}
@@ -55,14 +56,27 @@
                                             <label class="form-label" for="password">Contraseña</label>
                                         </div>
 
+                                        {% if form.errors %}
+                                        <div class="alert alert-danger">
+                                            {% for field in form %}
+                                            {% for error in field.errors %}
+                                            <p>{{ error }}</p>
+                                            {% endfor %}
+                                            {% endfor %}
+                                            {% if form.non_field_errors %}
+                                            {% for error in form.non_field_errors %}
+                                            <p>{{ error }}</p>
+                                            {% endfor %}
+                                            {% endif %}
+                                        </div>
+                                        {% endif %}
+
                                         <div class="pt-1 mb-4">
-                                            <button class="btn btn-dark btn-lg btn-block" type="submit">Iniciar Sesión</button>
+                                            <button class="btn btn-dark btn-lg btn-block" type="submit">Iniciar
+                                                Sesión</button>
                                         </div>
 
                                         <a class="small text-muted" href="#!">Olvidaste tu contraseña?</a>
-                                        <p></p>
-                                        <a href="#!" class="small text-muted">Términos de uso</a>
-                                        <a href="#!" class="small text-muted">Política de privacidad</a>
                                     </form>
 
                                 </div>
@@ -83,7 +97,7 @@
     <script>
         document.getElementById('id_username').classList.add('form-control')
         document.getElementById('id_password').classList.add('form-control')
-      </script>
+    </script>
 </body>
 
 </html>
