--- a/templates/proyecto/proyecto/createProyecto.html
+++ b/templates/proyecto/proyecto/createProyecto.html
@@ -1,10 +1,13 @@
 {% extends "index.html" %}
 
+{% block title %}Crear Proyecto{% endblock %}
+
 {% block content %}
-    <h1>{% if proyecto %}Editar Proyecto{% else %}Crear Proyecto{% endif %}</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Guardar</button>
-    </form>
+<h1>{{ titulo }}</h1>
+
+<form method="post">
+    {% csrf_token %}
+    {{ formulario.as_p }}
+    <button type="submit" class="btn btn-primary">Crear Proyecto</button>
+</form>
 {% endblock %}
