--- a/templates/usuario/perfil/password_change_form.html
+++ b/templates/usuario/perfil/password_change_form.html
@@ -1,12 +1,22 @@
 {% extends 'index.html' %}
 
 {% block content %}
-<div class="container mt-5">
-    <h1>Cambiar Contraseña</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-warning">Cambiar Contraseña</button>
-    </form>
-</div>
+  <h2>Cambiar contraseña</h2>
+
+  <!-- Mostrar los mensajes flash solo si hay un mensaje -->
+  {% if messages %}
+    <div class="alert alert-success">
+      {% for message in messages %}
+        <p>{{ message }}</p>
+      {% endfor %}
+    </div>
+  {% endif %}
+
+  <form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Cambiar Contraseña</button>
+  </form>
 {% endblock %}
+
+
