--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                 {% if user.is_authenticated %}
                 <!-- Gerente de recursos -->
                 <!-- Gerente -->
-                {% if user.is_superuser %}
+                {% if not user.is_superuser %}
                 <a href="{% url 'resumen' %}" class="list-group-item">
                     <i class="fas fa-tachometer-alt"></i> Resumen
                 </a>
@@ -96,7 +96,7 @@
         </button>
         <ul class="dropdown-menu" aria-labelledby="userDropdown">
             <li>
-                <a class="dropdown-item" href="{% url 'user_profile' pk=user.pk %}">
+                <a class="dropdown-item" href="{% url 'password_change' %}">
                     <i class="fas fa-user"></i> Mi perfil
                 </a>
             </li>
