--- a/templates/usuario/area/area_form.html
+++ b/templates/usuario/area/area_form.html
@@ -5,7 +5,7 @@
   
   <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form }}
     <button type="submit" class="btn btn-primary">Guardar</button>
   </form>
 
