--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
                 <a href="{% url 'lista_usuarios' %}" class="list-group-item">
                     <i class="fas fa-plus-circle"></i> Usuarios
                 </a>
-                <a href="#" class="list-group-item">
+                <a href="{% url 'asignar_usuarios' %}" class="list-group-item">
                     <i class="fas fa-plus-circle"></i> Grupos
                 </a>
                 <a href="{% url 'area_list' %}" class="list-group-item">
