--- a/templates/index.html
+++ b/templates/index.html
@@ -77,6 +77,9 @@
                 <a href="{% url 'subarea_list' %}" class="list-group-item">
                     <i class="fas fa-plus-circle"></i> Sub-Area
                 </a>
+                <a href="{% url 'estados' %}" class="list-group-item">
+                    <i class="fas fa-plus-circle"></i> Estados
+                </a>
                 {% endif %}
 
                 {% else %}
