--- a/templates/proyecto/documentos/createDocumento.html
+++ b/templates/proyecto/documentos/createDocumento.html
@@ -4,7 +4,7 @@
     <h1>{% if documento %}Editar Documento{% else %}Crear Documento{% endif %}</h1>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form }}
         <button type="submit" class="btn btn-primary">Guardar</button>
     </form>
 {% endblock %}
